# Kronos

./: README.md  pyproject.toml
examples/: example.ipynb  prediction_akshare_2024-2025.py  prediction_batch_example.py  prediction_cn_markets_day.py  prediction_example.py  prediction_new.py  prediction_new_GUI.py  prediction_wo_vol_example.py
finetune/: qlib_test.py  train_predictor.py  train_tokenizer.py
finetune_csv/: finetune_base_model.py  finetune_tokenizer.py  train_sequential.py
kronos/: kronos.py
tests/: test_kronos_regression.py
tests/data/: generate_regression_output.py
webui/: app.py  run.py
